plugins {
    id 'java'
    id 'application'
}

group = 'com.github.vikthorvergara'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

task runStructuredConcurrency(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.StructuredConcurrencyPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runScopedValues(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.ScopedValuesPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runStreamGatherers(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.StreamGatherersPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runConcurrencyLocksAtomics(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.ConcurrencyLocksAtomicsPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runReadWriteLock(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.ReadWriteLockPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runLockFreeStack(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.LockFreeStackPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runDateTimeBasics(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.DateTimeBasicsPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runDateTimeDuration(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.DateTimeDurationPOC'
    classpath = sourceSets.main.runtimeClasspath
}

task runDateTimeFormatter(type: JavaExec) {
    mainClass = 'com.github.vikthorvergara.jdk.DateTimeFormatterPOC'
    classpath = sourceSets.main.runtimeClasspath
}
